<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/AboutContainer"
    android:background="@color/darkGrey" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/aboutTopBar"
        android:background="@color/lightGrey"
        android:padding="5dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/aboutIcon"
            android:src="@drawable/fa_info_circle"
            android:background="@color/transparent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/aboutTitle"
            android:layout_toRightOf="@id/aboutIcon"
            android:id="@+id/recentTitle"
            android:textColor="@color/darkGrey"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inhumantermsContainer"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/inhumantermsIcon"
            android:src="@drawable/icons8_bookstack"
            android:background="@color/transparent"
            android:layout_centerVertical="true"
            android:paddingTop="5dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/inhumantermsIcon"
            android:id="@+id/inhumantermsTitleContainer"
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/app_name"
                android:id="@+id/inhumantermsTitle"
                android:textColor="@color/lightGrey"
                android:textSize="25sp"
                android:layout_centerVertical="true"
                android:textStyle="italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/appVersionText"
                android:id="@+id/appVersionText"
                android:textColor="@color/mediumGrey"
                android:textSize="14sp" />
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutText"
        android:id="@+id/aboutText"
        android:padding="10dp"
        android:textColor="@color/lightGrey"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect"
        android:id="@+id/connect"
        android:padding="10dp"
        android:textColor="@color/mediumGrey"
        android:textSize="18sp"
        android:layout_marginTop="10dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/connectContainer"
        android:padding="10dp">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linkedinBtn"
            android:src="@drawable/icons8_linkedin"
            android:background="@color/transparent" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/linkedinBtn"
            android:id="@+id/githubBtn"
            android:background="@color/transparent"
            android:src="@drawable/icons8_github"
            android:layout_marginLeft="15dp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/githubBtn"
            android:id="@+id/personalsiteBtn"
            android:background="@color/transparent"
            android:src="@drawable/icons8_businessman"
            android:layout_marginLeft="15dp" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyrightText"
        android:id="@+id/copyrightText"
        android:textColor="@color/mediumGrey"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/icons8Reference"
        android:id="@+id/icons8Reference"
        android:textColor="@color/mediumGrey"
        android:textSize="11sp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

</LinearLayout>